--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>來一杯滷味</title>
     <link rel="shortcut icon" href="image/豆干君icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/styleS.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="page">
