更新網站表單及配色

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#contact">聯絡方法</a></li>
         </ul>
       </nav>
-      <div class="hamburger">☰</div>
+      <div class="hamburger"></div>
     </header>
     <!-- 關於我們 -->
     <section class="about" id="about">
