--- a/index.html
+++ b/index.html
@@ -90,13 +90,10 @@
       </p>
     </footer>
   </div>
-  <script>
-    const hamburger = document.querySelector('.hamburger');
-    const navList = document.querySelector('#nav-list');
-
-    hamburger.addEventListener('click', () => {
-    navList.classList.toggle('show');
-  });
-  </script>
+  <a href="#nav-list" id="backToTop" title="回到頂部">
+    <img src="image/豆干箭頭.png" alt="回到頂部">
+  </a>
+  <script src="js/hamburged.js"></script>
+  <script src="js/backToTop.js"></script>
   </body>
 </html>
