更新網站內容

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>來一杯滷味</title>
-    <link rel="shortcut icon" href="image/豆干君icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/豆干君ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -12,6 +12,7 @@
     <header>
       <div class="header-content">
       <img src="image/豆干君.png" alt="Logo" class="logo">
+      <img src="image/來一杯滷味標題.png" alt="head" class="title" >
       <h1>來一杯滷味</h1>
       </div>
       <nav>
@@ -28,17 +29,15 @@
     <section class="about" id="about">
       <div class="overlay"></div>
       <div class="abouts">
-      <h2>慢火 2 小時，入口 2 秒愛上。</h2>
-      <p>
-        在來一杯滷味我們相信，美味值得用時間慢慢熬。
-嚴選每日新鮮食材，加入某某某特級醬油、十多種天然香料與中藥材，細火滷製 2 小時以上，讓每一口都充滿濃郁香氣與層次。
-不論是下班宵夜、追劇必備、聚會小酌，一杯在手，幸福到口！
-      </p>
+      <h2>關於一杯的故事</h2>
+      <p>一杯，不只是飲品，更是一種態度。</p>
+      <p>在來一杯滷味，我們專注於最單純的美味——蜜汁豆干。</p>
+      <p>以慢火細燉，讓甜蜜滲透每一塊豆乾的香氣，<br>再用心調和的醬汁，讓它在舌尖綻放記憶的溫度。</p>
       <ul>
-        <li>嚴選食材，新鮮看得見</li>
-        <li>特製滷汁，香濃不死鹹</li>
-        <li>多款選擇，滿足各種口味</li>
-        <li>外帶、內用、團購一站搞定</li>
+        <li>🥬 嚴選食材 — 新鮮安心，源自我們的堅持。</li>
+        <li>🍯 秘製蜜汁 — 甜香入味，每口都溫暖。</li>
+        <li>🔥 慢火細燉 — 耐心入味，豆干飄香。</li>
+        <li>🛡️ 無添加保證 — 保留原味，吃得安心。</li>
       </ul>
       </div>
     </section>
@@ -51,17 +50,18 @@
       <div class="product-list">
         <div class="product-item">
           <h3>蜜汁豆干</h3>
-          <ul>
-            <li>傳統手工製作，非基改黃豆製成</li>
-            <li>秘製蜜汁醬料，鹹中帶甜、不膩口</li>
-            <li>外Q內嫩，層次豐富、越嚼越香</li>
-            <li>無防腐劑，安心享受每一口</li>
-          </ul>
-
-          <h3>食用方式</h3>
           <p>
-            直接食用當零嘴、搭配白飯或粥品超下飯、切片夾入吐司或潤餅，也可搭配茶飲、啤酒當下酒菜。
+            使用嚴選優質黃豆，經過細緻工序製成，
+            搭配獨家蜜汁，經過兩小時慢火燉煮，讓甜香滲透每一口。
+            鹹甜交織，偏硬口感又Q彈，
+            既適合做為家常配菜，也很適合做為下酒小菜。
           </p>
+          <h3>食用方式</h3>
+          <ul>
+            <li><strong>直接享用</strong>：打開即可品嚐，甜香與豆香完美交織。</li>
+            <li><strong>日常搭配</strong>：配上清淡小菜或湯品，簡單卻充滿溫度。</li>
+            <li><strong>下酒小菜</strong>：冷藏後搭配啤酒或清酒，鹹甜滋味更迷人。</li>
+          </ul>
         </div>
       </div>
     </section>
@@ -76,7 +76,7 @@
       <ul>
         <li>電話：<a href="tel:0912345678"></a></li>
         <li>地址：</li>
-        <li>Email：<a href="@gmail.com">@gmail.com</a></li>
+        <li>Email：<a href="@gmail.com">lu-wei-cup@gmail.com</a></li>
         <li>
           Facebook：<a href="https://facebook.com/luwei" target="_blank"
             >來一杯滷味粉絲專頁</a
