--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="來一杯滷味-蜜汁豆干專賣店" />
+    <meta name="keywords" content="滷味,蜜汁豆干,小吃,來一杯滷味" />
+    
     <title>來一杯滷味</title>
     <link rel="shortcut icon" href="image/豆干君ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css" />
@@ -32,12 +35,12 @@
       <h2>關於一杯的故事</h2>
       <p>一杯，不只是飲品，更是一種態度。</p>
       <p>在來一杯滷味，我們專注於最單純的美味——蜜汁豆干。</p>
-      <p>以慢火細燉，讓甜蜜滲透每一塊豆乾的香氣，<br>再用心調和的醬汁，讓它在舌尖綻放記憶的溫度。</p>
+      <p>以慢火細燉，讓甜蜜滲透每一塊豆乾的香氣，再用心調和的醬汁，讓它在舌尖綻放記憶的溫度。</p>
       <ul>
-        <li>🥬 嚴選食材 — 新鮮安心，源自我們的堅持。</li>
-        <li>🍯 秘製蜜汁 — 甜香入味，每口都溫暖。</li>
-        <li>🔥 慢火細燉 — 耐心入味，豆干飄香。</li>
-        <li>🛡️ 無添加保證 — 保留原味，吃得安心。</li>
+        <li>🍢嚴選食材 — 新鮮安心，源自我們的堅持。</li>
+        <li>🍯秘製蜜汁 — 甜香入味，每口都溫暖。</li>
+        <li>🔥慢火細燉 — 耐心入味，豆干飄香。</li>
+        <li>🛡️無添加保證 — 保留原味，吃得安心。</li>
       </ul>
       </div>
     </section>
@@ -51,10 +54,7 @@
         <div class="product-item">
           <h3>蜜汁豆干</h3>
           <p>
-            使用嚴選優質黃豆，經過細緻工序製成，
-            搭配獨家蜜汁，經過兩小時慢火燉煮，讓甜香滲透每一口。
-            鹹甜交織，偏硬口感又Q彈，
-            既適合做為家常配菜，也很適合做為下酒小菜。
+            使用嚴選優質黃豆，經過細緻工序製成，搭配獨家蜜汁，經過兩小時慢火燉煮，讓甜香滲透每一口。鹹甜交熾，偏硬口感又Q彈，既適合做為家常配菜，也很適合做為下酒小菜。
           </p>
           <h3>食用方式</h3>
           <ul>
