更新關於我們內容

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
       <div class="overlay"></div>
       <div class="abouts">
       <h2>關於一杯的故事</h2>
-      <p>一杯，不只是飲品，更是一種態度。</p>
+      <h4>一杯，不只是飲品，更是一種態度。</h4>
       <p>在來一杯滷味，我們專注於最單純的美味——蜜汁豆干。</p>
-      <p>以慢火細燉，讓甜蜜滲透每一塊豆乾的香氣，再用心調和的醬汁，讓它在舌尖綻放記憶的溫度。</p>
+      <p>以細火慢滷，讓甜蜜滲透每一塊豆干的香氣，再用心調和的醬汁，讓它在舌尖綻放記憶的溫度。</p>
       <br>
       <ul>
-        <li>🍢嚴選食材 — 新鮮安心，源自我們的堅持。</li>
-        <li>🍯秘製蜜汁 — 甜香入味，每口都溫暖。</li>
-        <li>🔥慢火細燉 — 耐心入味，豆干飄香。</li>
-        <li>🛡️無添加保證 — 保留原味，吃得安心。</li>
+        <li>🍢嚴選食材 — 新鮮食材，嚴格挑選，堅持原味。</li>
+        <li>🍯秘製滷汁 — 香甜入味，每口回味。</li>
+        <li>🔥細火慢滷 — 以時間，換取甘香入味的每一口。</li>
+        <li>✅無添加保證 — 無添加保證，安心每一口。</li>
       </ul>
       </div>
     </section>
@@ -54,8 +54,7 @@
       <div class="product-list">
         <div class="product-item">
           <h3>蜜汁豆干</h3>
-          <p>
-            使用嚴選優質黃豆，經過細緻工序製成，搭配獨家蜜汁，經過兩小時慢火燉煮，讓甜香滲透每一口。鹹甜交熾，偏硬口感又Q彈，既適合做為家常配菜，也很適合做為下酒小菜。
+          <p>使用嚴選優質黃豆，經過細緻工序製成，搭配獨家密製滷汁，經過兩小時細火慢滷，讓甜香滲透每一口。鹹甜交熾，口感偏硬卻又很Q彈，既適合做為家常配菜，也很適合做為下酒小菜。
           </p>
           <h3>食用方式</h3>
           <ul>
