--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="滷味,蜜汁豆干,小吃,來一杯滷味" />
 
     <title>來一杯滷味</title>
-    <link rel="shortcut icon" href="image/豆干君ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/豆干君icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
